Add spent to BudgetContent
